--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "dependencies": {
     "bs-platform": "^1.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "bs-platform": "^1.2.1"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/bs-platform/bin/bsc.exe -c -bs-main main_entry.ml",
-    "start": "npm run build && node main_entry.js"
+    "start": "./run.sh"
   },
   "author": "",
   "license": "ISC"
