--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,19 +1,6 @@
 {
   "name": "bs-string",
-  "version": "0.1.2",
-  "ocaml-config": {
-    "sources": [
-      {
-        "dir": "src",
-        "public" : "all",
-        "files": [
-          "clickComponent.ml",
-          "dom.ml",
-          "formTest.ml",
-          "main.ml",
-          "react.ml"
-        ]
-      }
-    ]
+  "sources": {
+    "dir": "src"
   }
 }
