--- a/package.json
+++ b/package.json
@@ -9,14 +9,13 @@
     "react-dom": "^15.3.2"
   },
   "devDependencies": {
-    "bs-platform": "^1.3.0"
+    "bs-platform": "^1.4.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "bsb",
-    "start": "./run.sh",
     "electron": "electron .",
-    "watch": "watchman -j < watch.json"
+    "watch": "bsb -w"
   },
   "author": "",
   "license": "ISC"
